--- a/package.json
+++ b/package.json
@@ -1,26 +1,50 @@
 {
   "private": true,
   "scripts": {
-    "prod": "gulp --production",
-    "dev": "gulp watch"
+    "dev": "npm run development",
+    "development": "mix",
+    "watch": "mix watch",
+    "hot": "mix watch --hot",
+    "prod": "npm run production",
+    "production": "mix --production"
   },
   "dependencies": {
-    "admin-lte": "^3.0.5",
-    "axios": "^0.19.0",
-    "element-ui": "^2.0.11",
-    "lodash": "^4.17.4",
-    "moment": "^2.24",
-    "vue": "^2.5.13",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@popperjs/core": "^2.11.8",
+    "@tinymce/tinymce-vue": "^3.2.8",
+    "axios": "^1.6.8",
+    "bootstrap": "^5.3.7",
+    "datatables.net-bs4": "^2.3.2",
+    "element-ui": "^2.15.14",
+    "flatpickr": "^4.6.13",
+    "gridstack": "^12.2.2",
+    "jquery": "^3.7.1",
+    "jquery-ui": "^1.14.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "overlayscrollbars": "^2.11.4",
+    "popper.js": "^1.16.1",
+    "select2": "^4.1.0-rc.0",
+    "sweetalert2": "^11.22.2",
+    "toastr": "^2.1.4",
     "vue-data-tables": "^3.4.4",
     "vue-events": "^3.1.0",
-    "vue-i18n": "^8.12",
-    "vue-router": "^3.0.0",
-    "vue-shortkey": "^3.1.7",
-    "vue-template-compiler": "^2.5.13"
+    "vue-flatpickr-component": "^8.1.8",
+    "vue-i18n": "^8.28.2",
+    "vue-router": "^3.6.5",
+    "vue-select": "^3.20.4",
+    "vue-shortkey": "^3.1.7"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "laravel-elixir": "^5.0.0",
-    "bootstrap-sass": "^3.3.0"
+    "bootstrap-sass": "^3.4.1",
+    "husky": "^9.1.7",
+    "laravel-mix": "^6.0.49",
+    "laravel-mix-merge-manifest": "^2.1.0",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.89.2",
+    "sass-loader": "^12.6.0",
+    "vue": "^2.7.16",
+    "vue-loader": "^15.11.1",
+    "vue-template-compiler": "^2.7.16"
   }
 }
